# 2d-ddm-zebrafish

./: .gitignore  Makefile  README.md  boutfield.py  constants.py  fit.py  pyproject.toml  simulate.py
src/: animate.py  animate_fish.py  constants.py  decision_making.py  evidence_accumulation.py  experiment.py  fit.py  load_data.py  model.py  oragnize_data.py  plot.py  simulate.py  simulator.py
