[tool.poetry]
version = "0.0.0"
name=""
description=""
authors = [
  "Ariel Martínez <amartinezsilberstein@fas.harvard.edu>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.24.1"
matplotlib = "^3.6.3"
tqdm = "^4.66.1"
scipy = "^1.11.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"

[tool.black]
line_length = 120
target_version = ["py36", "py37", "py38"]
exclude = '/(\.venv)/'

[tool.isort]
profile = "black"
multi_line_output = 3
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"

[build-system]
requires = ["poetry>=1.1.7"]
build-backend = "poetry.masonry.api"
